Fix “Write a reply” bar overlapping blip toolbar overflow menu

--- a/extension/styles/toolbars.css
+++ b/extension/styles/toolbars.css
@@ -1,6 +1,7 @@
 /* Blip toolbars */
 .blip-menu-container {
 	border-radius: 2px !important;
+	z-index: 3 !important;
 }
 	.blip-menu-container.fixed {
 		top: 49px !important;
